Extra - fix line-height so lines don't overlap on small screen

--- a/2 - Sexy Typography/sandbox.css
+++ b/2 - Sexy Typography/sandbox.css
@@ -8,6 +8,7 @@
     position: relative;
     display: inline-block;
     font-size: 5rem;
+    line-height: 4rem;
     text-transform: uppercase;
     color: #00b3b4;
     text-shadow: 3px 3px 0px #e7eef1, 8px 8px 0px rgba(0,0,0,0.1);
@@ -15,6 +16,7 @@
 
    .threedee-typo {
     font-size: 5rem;
+    line-height: 4rem;
     text-transform: uppercase;
     color: #f2395a;
     -webkit-transform: skew(-5deg, -5deg) rotate(5deg);
